--- a/package.json
+++ b/package.json
@@ -69,7 +69,9 @@
     "@nestjs/platform-express": "^6.11.4",
     "@nestjs/testing": "^6.11.4",
     "@nestjs/typeorm": "^6.2.0",
+    "@types/express": "^4.17.2",
     "config": "^3.2.4",
+    "express": "^4.17.1",
     "lodash": "^4.17.15",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
