--- a/package.json
+++ b/package.json
@@ -69,7 +69,9 @@
     "@nestjs/platform-express": "^6.11.4",
     "@nestjs/testing": "^6.11.4",
     "@nestjs/typeorm": "^6.2.0",
+    "@types/busboy": "^0.2.3",
     "@types/express": "^4.17.2",
+    "busboy": "^0.3.1",
     "config": "^3.2.4",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
